added log download

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <div id="logger-container">
     <div id="logger-buttons">
       <button type='button' onclick=""> start tracking </button>
-      <button id='but' class='log-point-button' type='button'> log oost </button>
-      <button class='log-point-button' type='button'> log O-hoek </button>
-      <button class='log-point-button' type='button'> log N-hoek </button>
-      <button class='log-point-button' type='button'> log noord </button>
+      <button class='log-point-button' type='button' value='oost'> log oost </button>
+      <button class='log-point-button' type='button' value='O-hoek'> log O-hoek </button>
+      <button class='log-point-button' type='button' value='N-hoek'> log N-hoek </button>
+      <button class='log-point-button' type='button' value='noord'> log noord </button>
     </div>
     <div id="logger-feedback">
       <p>log something</p>
