--- a/index.html
+++ b/index.html
@@ -25,20 +25,17 @@
   <script type='module' src="./main.js"></script>
   <div id="logger-container">
     <div id="logger-buttons">
-      <button type='button' onclick=""> start tracking </button>
-      <button class='log-point-button' type='button' value='oost'> log oost </button>
-      <button class='log-point-button' type='button' value='O-hoek'> log O-hoek </button>
-      <button class='log-point-button' type='button' value='N-hoek'> log N-hoek </button>
-      <button class='log-point-button' type='button' value='noord'> log noord </button>
+      <button id='track-button' type='button'> start tracking </button>
+      <button class='log-point-button' type='button' value='oost'> oost </button>
+      <button class='log-point-button' type='button' value='O-hoek'> O-hoek </button>
+      <button class='log-point-button' type='button' value='N-hoek'> N-hoek </button>
+      <button class='log-point-button' type='button' value='noord'> noord </button>
+      <button class='log-point-button' type='button' value='ingang'> ingang </button>
+      <button class='log-point-button' type='button'> other </button>
     </div>
     <div id="logger-feedback">
       <p>log something</p>
     </div>
   </div>
-  <script>
-  function logPoint() {
-    console.log(this);
-  }
-  </script>
 </body>
 </html>
