--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button class='log-point-button' type='button' value='noord'> noord </button>
       <button class='log-point-button' type='button' value='ingang'> ingang </button>
       <button id='track-button' type='button'> start tracking </button>
-      <button class='log-point-button' type='button'> other </button>
+      <button id='other-button' class='log-point-button' type='button'> other </button>
     </div>
     <div id="logger-feedback">
       <p>log something</p>
