add reset logId button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <button class='log-point-button' type='button' value='ingang'> ingang </button>
       <button id='track-button' type='button'> start tracking </button>
       <button id='other-button' class='log-point-button' type='button'> other </button>
+      <button id='reset-button' type='button'> reset logId </button>
     </div>
     <div id="logger-feedback">
       <p>log something</p>
